# Bottle_Cap_Detection_ML_Engineer_Test

./: .gitignore  Dockerfile  README.md  data.yaml  pyproject.toml  settings.yaml
.github/workflows/: ci_cd.yml
bsort/: main.py
tests/: test_bsort.py
